--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mathew Ewaoche",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "pdf-parse": "^1.1.1"
